test/tests/operators/fork_merge/error_bytes_output.txt
error: `fork_merge` subpipelines must produce events
 --> tests/operators/fork_merge/error_bytes_output.tql:6:12
  |
6 | fork_merge { write_json }, { summarize c=count() }
  |            ^^^^^^^^^^^^^^ 
  |
